Cosmetic spacing issue

--- a/src/themes/docroot/css/common-override.css
+++ b/src/themes/docroot/css/common-override.css
@@ -20,7 +20,7 @@
 .simple-desc{display:block;padding-top:2px;}
 .simple-desc.helper-card{display:inline-block;font-size:smaller;letter-spacing:-1px;vertical-align:unset;}
 .smallcard .content{font-size:14px;height:125px;line-height:20px !important;}
-.smallcard .subinfos{font-size:14px;margin-top:1px;margin-bottom:0px;line-height:17px;}
+.smallcard .subinfos{font-size:14px;margin-top:1px;margin-bottom:0px;margin-left:18px;line-height:17px;}
 .span3{width:270px;} .row>div.span3{height:217px;}
 .ssid-status{margin-left:18px;margin-top:2px;padding-top:0px;line-height:12px;height:15px;}
 .ssid-status>.light{margin-top:1px;}
